# mcp-proxy

./: .gitignore  README.md  pyproject.toml
src/mcp_proxy/: config.py  config.yaml  main.py
src/mcp_proxy/api/: completion.py  mcp_sse.py  mcp_streamable_http.py  register_mcp.py  register_task.py  schemas.py
src/mcp_proxy/core/: agent.py  chat.py  execute_tool.py  prompts.py  schema_converter.py
src/mcp_proxy/database/: session.py
src/mcp_proxy/database/dao/: register_mcp.py  register_task.py
src/mcp_proxy/database/models/: mcp_tool.py  register_mcp.py  register_task.py
src/mcp_proxy/schemas/: register_mcp.py  response.py
src/mcp_proxy/service/: json_rpc.py  register_mcp.py
src/mcp_proxy/service/session/: manager.py
static/: app.js  chat.html  chat.js  index.html  index.js
