[project]
name = "mcp-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "cachetools>=7.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "redis>=7.3.0",
    "sqlmodel>=0.0.37",
    "sse-starlette>=3.3.3",
    "uvicorn>=0.42.0",
]
