[project]
name = "mcp-proxy"
version = "1.0.0"
description = "A powerful Model Context Protocol (MCP) proxy service with AI-powered chat interface and OpenAPI integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.3.2",
    "cachetools>=7.0.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-openai>=1.1.12",
    "loguru>=0.7.3",
    "openai>=2.29.0",
    "pyyaml>=6.0.3",
    "redis>=7.3.0",
    "sqlmodel>=0.0.37",
    "sse-starlette>=3.3.3",
    "uvicorn>=0.42.0",
]
